--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@types/react-native-vector-icons": "^6.4.10",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-gesture-handler": "^2.3.2",
     "react-native-get-random-values": "^1.7.2",
+    "react-native-reanimated": "^2.6.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-query": "^3.34.19",
     "uuid": "^8.3.2"
