--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react-native-vector-icons": "^6.4.10",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-config": "^1.4.5",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-get-random-values": "^1.7.2",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-reanimated": "^2.6.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
