--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "@context/*": ["./src/context/*"],
       "@interfaces/*": ["./src/interfaces/*"],
       "@navigation/*": ["./src/navigation/*"],
+      "@redux/*": ["./src/redux/*"],
       "@screens/*": ["./src/screens/*"]
     },
     "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
