--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=8081'",
-    "clean": "npm start --reset-cache && rm -rf /tmp/metro-*"
+    "clean": "npm start --reset-cache && rm -rf /tmp/metro-*",
+    "full-clean": "rm -rf ./node_modules && npm install"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.1.5",
+    "@react-native-firebase/app": "^14.7.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
@@ -19,6 +21,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-redux": "^7.1.23",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-bouncy-checkbox": "^2.1.10",
