--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -198,6 +198,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation project(':react-native-vector-icons')
+    implementation project(':lottie-react-native')
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
