--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.1.5",
+    "@hookform/resolvers": "^2.8.8",
     "@react-native-firebase/app": "^14.7.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
@@ -23,6 +24,7 @@
     "@types/react-redux": "^7.1.23",
     "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
+    "react-hook-form": "^7.29.0",
     "react-native": "0.67.4",
     "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-config": "^1.4.5",
@@ -37,7 +39,8 @@
     "react-query": "^3.34.19",
     "react-redux": "^7.2.8",
     "redux-devtools-extension": "^2.13.9",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
