--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.1.5",
     "@hookform/resolvers": "^2.8.8",
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-firebase/app": "^14.7.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@reduxjs/toolkit": "^1.8.1",
+    "@supabase/supabase-js": "^1.33.3",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-redux": "^7.1.23",
     "lottie-react-native": "^5.0.1",
@@ -35,6 +37,7 @@
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-query": "^3.34.19",
     "react-redux": "^7.2.8",
